--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.0.4",
+    "@mui/material": "^5.15.19",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.2",
     "cloudinary": "^2.2.0",
