--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "framewell",
+  "name": "applysnap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/space-grotesk": "^5.0.18",
     "@headlessui/react": "^2.0.4",
     "@mui/material": "^5.15.19",
     "@types/jsonwebtoken": "^9.0.6",
