--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.2",
     "cloudinary": "^2.2.0",
+    "framer-motion": "^11.11.8",
     "graphql-request": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
