--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/space-grotesk": "^5.0.18",
     "@headlessui/react": "^2.0.4",
     "@mui/material": "^5.15.19",
+    "@ramonak/react-progress-bar": "^5.3.0",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.2",
     "cloudinary": "^2.2.0",
@@ -25,7 +26,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-toastify": "^10.0.5"
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@grafbase/sdk": "^0.25.0",
