--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "node app/api/server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -18,11 +19,13 @@
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.2",
     "cloudinary": "^2.2.0",
+    "express": "^4.21.2",
     "framer-motion": "^11.11.8",
     "graphql-request": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -35,8 +38,10 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
+    "node-polyfill-webpack-plugin": "^4.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5"
-  }
+  },
+  "proxy": "https://api.sportmonks.com"
 }
