--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/space-grotesk": "^5.0.18",
+    "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@headlessui/react": "^2.0.4",
     "@mui/material": "^5.15.19",
     "@ramonak/react-progress-bar": "^5.3.0",
