--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-auth": "^4.24.7",
     "node-fetch": "^3.3.2",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
