--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "server": "node app/api/server.js"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@dicebear/avatars": "^4.10.8",
+    "@dicebear/avatars-identicon-sprites": "^4.10.8",
+    "@dicebear/avatars-initials-sprites": "^4.10.8",
+    "@dicebear/collection": "^9.2.2",
+    "@dicebear/core": "^9.2.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/space-grotesk": "^5.0.18",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.0.4",
-    "@mui/material": "^5.15.19",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
     "@ramonak/react-progress-bar": "^5.3.0",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.2",
